# HeTu

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONFIG_TEMPLATE.yml  Dockerfile  GEMINI.md  README.md  agent.ps1  agent.sh  agent_docker  agent_install.sh  claude.ps1  codex.ps1  codex.sh  codex_docker  docker-compose.yaml  example.py  gemini.ps1  gemini.sh  gemini_docker  llms.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: cliff.toml  dependabot.yml  release-drafter.yml
.github/prompts/: speckit.analyze.prompt.md  speckit.checklist.prompt.md  speckit.clarify.prompt.md  speckit.constitution.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md  speckit.taskstoissues.prompt.md
.github/workflows/: cd.yml  ci.yml  docker-image.yml  sync-npm-package.yaml  trigger-vercel-deploy.yml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
ClientSDK/cshape/: HeTuClient.cs
ClientSDK/csharp/: HeTuClient.cs  ZlibProtocol.cs
ClientSDK/csharp/HeTu.Client.Tests/: CallRejectTests.cs  HeTu.Client.Tests.csproj  HeadlessHeTuClientTests.cs  IntegrationSmokeTests.cs  SerialExecutorTests.cs  WebSocketTransportTests.cs
ClientSDK/js/: .gitignore  README.md  package.json  rollup.config.js  todo.md
ClientSDK/js/src/: client.js  index.js  (+4 more)
ClientSDK/typescript/: .prettierrc  package-lock.json  package.json  tsconfig.json  vitest.config.ts
ClientSDK/unity/: CLAUDE.md
benchmark/: Dockerfile  app.py  backend_upsert result.md  hetu_rpc_result.md  pyproject.toml  redis-cmd-profiler.py  test_bench.py  test_bench_redis_backend.py  test_redis_backend.py  ya_backend_upsert.py  ya_hetu.py  ya_hetu_pubsub.py  ya_hetu_pubsub_updater.py  ya_hetu_rpc.py
benchmark/hypothesis/: locust_redis_upsert.py  redis_raw_upsert result.md  redis_upsert_benchmark result.md  test_redis_upsert.py  ws_bench_servers.py  ya_cachetools.py  ya_compressors.py  ya_redis_raw_upsert.py  ya_redis_upsert.py  ya_redis_zrange.py  ya_supabase.py  ya_uuid_comparison.py  ya_ws_ping.py
benchmark/server/: Dockerfile  app.py
docs/: _index.md  advanced.md  concepts.md  getting-started.md  installation.md  operations.md  unity-client.md
docs/api/: _coverage.md  _index.md  components.md  decorators.md  endpoint.md  exceptions.md  migration.md  system.md
docs/en/: _index.md  advanced.md  concepts.md  getting-started.md  operations.md  unity-client.md
docs/plans/: 2026-02-16-shared-memory-backend-design.md  2026-02-21-sql-backend-prompt.md  2026-03-21-js-client-sdk.md
docs/tutorial/: _index.md  chat-room.md
docs/zh/: _index.md  advanced.md  concepts.md  getting-started.md  operations.md  unity-client.md
examples/server/: first_game.py
hetu/: CONFIG_TEMPLATE.py  CONFIG_TEMPLATE.yml  __init__.py  __main__.py  llms.txt  manager.py  replay.py  server.py  web.py
hetu/cli/: __init__.py  base.py  build.py  init.py  migrate.py  migration.py  start.py  unlock.py
hetu/common/: __init__.py  csharp_keyword.py  helper.py  multimap.py  permission.py  singleton.py  slowlog.py  snowflake_id.py  ttl_lru_cache.py  yamlloader.py
hetu/data/: __init__.py  component.py  default_migration.py  idmap.py  manager.py  migration.py  select.py  session.py  sub.py
hetu/endpoint/: __init__.py  connection.py  context.py  definer.py  executor.py  guard.py  lock.py  response.py
hetu/i18n/: PROMPT.md  __init__.py
hetu/logging/: default.py  handlers.py
hetu/safelogging/: filter.py  handlers.py
hetu/server/: __init__.py  endpoint.py  main.py  message.py  process.py  receiver.py  web.py  websocket.py  worker.py
hetu/sourcegen/: csharp.py
hetu/system/: __init__.py  caller.py  connection.py  context.py  definer.py  dispatcher.py  enpoint.py  execution.py  executor.py  future.py  lock.py  startup.py
hetu/testing/: __init__.py
scripts/: api_extras.py  gen_api_docs.py  translate_new_content.py
scripts/templates/: api_coverage.md.j2  api_index.md.j2  api_page.md.j2
scripts/tests/: test_gen_api_docs.py
src/: client.ts  index.test.ts  index.ts  logger.ts  protocol.ts
tests/: app.py  backend_mgr.py  config.py  conftest.py  test_backend.py  test_backend_basic.py  test_backend_client.py  test_backend_connect.py  test_backend_direct.py  test_backend_idmap.py  test_backend_mq.py  test_backend_redis.py  test_backend_redis_batch.py  test_backend_redis_cluster_pubsub.py  test_backend_session.py  test_backend_session_basic.py  test_backend_session_cluster.py  test_backend_session_composer.py  test_backend_session_race.py  test_backend_sql.py  test_backend_sub.py  test_cli_init.py  test_cli_start.py  test_common.py  test_component_define.py  test_data_idmap.py  test_dispatcher.py  test_endpoint_connection.py  test_endpoint_rls.py  test_example_chat.py  test_executor.py  test_future.py  test_main.py  test_migration.py  test_pipeline.py  test_safelogging.py  test_sourcegen.py  test_system_connection.py  test_system_define.py  test_system_executor.py  (+7 more)
tests/arrange/: backends.py
tests/deprecated_tests/: app.py  backend_mgr.py  test_backend.py  test_backend_deprecated.py  test_backend_mq_deprecated.py  test_executor.py  test_executor_deprecated.py  test_main.py  test_system_define_deprecated.py  test_websocket.py
tests/fixtures/: backends.py  backends_v2.py  cluster.py  defines.py  redis-cluster.yaml  redis_service.py  sql_service.py  test_data.py  testapp.py  testdata.py
tests/old_integrations/: README.md  backend_mgr.py  test_backend_mq.py  test_component_define.py  test_executor.py  test_main.py  test_sourcegen.py  test_system_define.py  test_websocket.py
tools/: redis-cmd-profiler.py
(+176 files in other folders)
