[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "hetudb"
dynamic = ["version"]
description = "河图：基于ECS理念，整合数据库和逻辑的游戏服务器框架"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [
    {name = "Zhang Jianhao", email = "heeroz@gmail.com"}
]
keywords = [
    "online", "game", "server", "database",
    "ecs", "entity", "component",
    "mmo", "multiplayer", "gamedev", "game-framework", "game-server", "game-engine"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "gitpython~=3.1",
    "numpy~=2.3",
    "orjson~=3.11",
    "pyyaml~=6.0",
    "redis[hiredis]~=7.0",
    "sanic~=25.3",
    "sortedcontainers~=2.4",
    "tabulate>=0.9.0",
    "wcwidth>=0.2.13",
    "websockets>=15.0.1",
]

[project.urls]
Homepage = "https://hetudb.cn"

[project.scripts]
hetu = "hetu.__main__:main"

[dependency-groups]
dev = [
    "aiohttp>=3.13.1",
    "black>=25.9.0",
    "docker>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sanic-testing>=24.6.0",
    "tqdm>=4.67.1",
    "trustme>=1.2.1",
]

[tool.setuptools_scm]
# 从 git tag 自动生成版本号
version_scheme = "guess-next-dev"
# for dependabot to work
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
