[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "hetudb"
dynamic = ["version"]
description = "河图：基于ECS理念，整合数据库和逻辑的游戏服务器框架"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [{ name = "Zhang Jianhao", email = "heeroz@gmail.com" }]
keywords = [
    "online",
    "game",
    "server",
    "database",
    "ecs",
    "entity",
    "component",
    "mmo",
    "multiplayer",
    "gamedev",
    "game-framework",
    "game-server",
    "game-engine",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "brotli>=1.2.0",
    "msgpack>=1.1.2",
    "msgspec>=0.20.0",
    "numpy~=2.3",
    "pynacl>=1.6.2",
    "pyyaml~=6.0",
    "redis[hiredis]~=7.0",
    "sanic~=25.3",
    "sortedcontainers~=2.4",
    "tabulate>=0.9.0",
    "wcwidth>=0.2.13",
    "websockets>=15.0.1",
]

[project.urls]
Homepage = "https://hetudb.cn"

[project.scripts]
hetu = "hetu.__main__:main"

[dependency-groups]
dev = [
    "aiohttp>=3.13.1",
    "austin-dist>=4.0.0",
    "basedpyright>=1.36.1",
    "docker>=7.1.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "mypy>=1.19.0",
    "pandas>=2.3.3",
    "py-spy>=0.4.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.6",
    "sanic-testing>=24.6.0",
    "tqdm>=4.67.1",
    "trustme>=1.2.1",
    "ya",
]

[tool.setuptools_scm]
# 从 git tag 自动生成版本号
version_scheme = "guess-next-dev"
# for dependabot to work
fallback_version = "0.0.0"

[tool.setuptools.packages.find]


[tool.pytest.ini_options]
# 自动发现async test_*函数
asyncio_mode = "auto" # or "strict"
# 夹具和测试函数的asyncio loop在同一个文件中保持一致
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"


[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.uv.sources]
ya = { git = "https://github.com/Heerozh/ya.git" }

[tool.pyright]
typeCheckingMode = "standard"
# reportUnknownVariableType = false
# reportUnknownMemberType = false

# [[tool.pyright.executionEnvironments]]
# root = "tests"  # 这会导致项目根目录改为tests
# extraPaths = ["src"]  # 添加src到搜索路径
# 把“可选值使用不安全”的报告降级（或关闭）
#reportOptionalMemberAccess = "none"
#reportOptionalSubscript = "none"
#reportOptionalIterable = "none"
